--- a/README
+++ b/README
@@ -1,16 +1,31 @@
-## Pecube-HUGG
-This is the HUGG version of the thermokinematic and thermochronometer age prediction program Pecube.
-The code was forked from Pecube version 3.0, distributed by Jean Braun in September 2010.
+This is the HUGG version of the thermokinematic and thermochronometer age
+prediction program Pecube. The code was forked from Pecube version 3.0,
+distributed by Jean Braun in September 2010.
 
-#### Licensing
-The HUGG version of Pecube is licensed licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-nc/3.0/deed.en_US">[Creative Commons Attribution-NonCommercial 3.0 Unported License](http://creativecommons.org/licenses/by-nc/3.0/deed.en_US).
+--- License ---
+The HUGG version of Pecube is licensed licensed under a Creative Commons
+Attribution-NonCommercial 3.0 Unported License
+(http://creativecommons.org/licenses/by-nc/3.0/deed.en_US).
 
-![alt text](http://i.creativecommons.org/l/by-nc/3.0/88x31.png "Creative Commons License")
+--- Attribution ---
+When publishing or presenting results from Pecube experiments please cite the
+following article(s):
 
-#### Attribution
-When publishing or presenting results from Pecube experiments please cite the following article(s):
-* Braun, J. (2003). Pecube: A new finite element code to solve the heat transport equation in three dimensions in the Earth’s crust including the effects of a time- varying, finite amplitude surface topography. _Compututers and Geosciences_, 29:787–794.
-* Braun, J., der Beek, van, P., Valla, P., Robert, X., Herman, F., Glotzbach, C., et al. (2012). Quantifying rates of landscape evolution and tectonic processes by thermochronology and numerical modeling of crustal heat transport using PECUBE. _Tectonophysics_, 524–525(0), 1–28. doi:10.1016/j.tecto.2011.12.035
+Braun, J. (2003). Pecube: A new finite element code to solve the heat transport
+    equation in three dimensions in the Earth’s crust including the effects of a
+    time-varying, finite amplitude surface topography. Computers and
+    Geosciences, 29:787–794.
 
-#### Inversion using the Neighbourhood Algorithm
-If performing inversions of thermochronometer data using the [Neighbourhood Algorithm](http://rses.anu.edu.au/~malcolm/na/), be aware that as described in the software package, use of the Neighbourhood Algorithm is restricted to non-commercial research and teaching. Any commercial use requires explicit written permission. More information about the Neighbourhood Algorithm and its use can be found on the [Neighbourhood Algorithm web page](http://rses.anu.edu.au/~malcolm/na/).
+Braun, J., der Beek, van, P., Valla, P., Robert, X., Herman, F., Glotzbach, C.,
+    et al. (2012). Quantifying rates of landscape evolution and tectonic
+    processes by thermochronology and numerical modeling of crustal heat
+    transport using PECUBE. Tectonophysics, 524–525(0), 1–28.
+    doi:10.1016/j.tecto.2011.12.035
+
+--- Inversion using the Neighbourhood Algorithm ---
+If performing inversions of thermochronometer data using the Neighbourhood
+Algorithm (http://rses.anu.edu.au/~malcolm/na/), be aware that as described in
+the software package, use of the Neighbourhood Algorithm is restricted to non-
+commercial research and teaching. Any commercial use requires explicit written
+permission. More information about the Neighbourhood Algorithm and its use can
+be found on the Neighbourhood Algorithm web page.
